fix for bug #2905 - "mysqladmin.c & co fail to use MYSQL_PORT as the default value of the TCP/IP port"